Tests Refactoring